--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Emel Alkim",
   "license": "ISC",
   "dependencies": {
-    "p-queue": "^7.1.0",
+    "promise-queue": "^2.2.5",
     "xml2js": "^0.4.19"
   }
 }
